chore: Update dependencies to latest versions